--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,13 +4,16 @@ body {
     color: $primaryColor; 
   }
 
-  img:hover:nth-child(even) {
+
+  div.member:nth-child(even) img:hover {
     opacity: 1
   }
 
-  img:hover:nth-child(odd) {
-    opacity: 0.1
+
+  div.member:nth-child(odd) img:hover {
+    opacity: 0.2
   }
+
 
   img {
     border-radius: 25px;
